--- a/src/app/adminsignup/adminsignup.component.html
+++ b/src/app/adminsignup/adminsignup.component.html
@@ -1,8 +1,7 @@
-<p>adminsignup works!</p>
-
 <div class="form-box">
-    <h5>CROWN WEALTH INSTITUTION</h5>
+    
     <form class="form">
+        <h6 class="text-center">CROWN WEALTH INSTITUTION</h6>
         <span class="title">Sign up Admin</span>
         <div class="form-container">
             <input type="text" placeholder="FirstName"  [(ngModel)]="FirstName">
