--- a/src/app/adminsignin/adminsignin.component.css
+++ b/src/app/adminsignin/adminsignin.component.css
@@ -4,6 +4,7 @@
     padding: 1rem;
     max-width: 350px;
     border-radius: 0.5rem;
+    margin-left: 500px;
     box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
   }
   
