--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,10 +1,4 @@
-<p>dashboard works!</p>
-<a routerLink="" class="nav nav-link">Home|</a>
-<a routerLink="/dashboard" class="nav nav-link">Dashboard|</a>
-
-
-
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+<nav class="navbar navbar-expand-lg bg-body-secondary">
     <div class="container-fluid">
       <a routerLink="dashboard" class="navbar-brand" href="#">Dashboard</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -15,14 +9,11 @@
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
-          </li>
         </ul>
         <form class="d-flex" role="search">
-          <a routerLink="/AdminSignUp" class="nav nav-link">SIGN</a>
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
+          <a routerLink="/AdminSignUp" class="nav nav-link text-info">Admin Sign Up</a>
+          <a routerLink="/AdminSignIn" class="nav nav-link text-info">Admin Sign In</a>
+          <a routerLink="/studentsignup" class="nav nav-link text-info">Student Sign In</a>
         </form>
       </div>
     </div>
