--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -13,7 +13,7 @@
         <form class="d-flex" role="search">
           <a routerLink="/AdminSignUp" class="nav nav-link text-info">Admin Sign Up</a>
           <a routerLink="/AdminSignIn" class="nav nav-link text-info">Admin Sign In</a>
-          <a routerLink="/studentsignup" class="nav nav-link text-info">Student Sign In</a>
+          <a routerLink="/signup" class="nav nav-link text-info">Student Sign In</a>
         </form>
       </div>
     </div>
